# ChatApp

./: .gitignore
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/.pytest_cache/v/cache/: lastfailed
backend/src/: config.py  db.py  lifespan.py  main.py  tester.py
backend/src/models/: user.py
backend/src/routes/: auth.py  ping.py  root.py  token_test.py
backend/src/schemas/: user.py
backend/src/services/: auth_service.py
backend/src/utils/: auth.py  jwt.py
client/chat-app-client/: package-lock.json  package.json
frontend/client-chat/: .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/client-chat/src/: App.css  App.tsx  index.css  main.tsx
frontend/client-chat/src/components/: Checkbox.tsx  Image.tsx  InputField.tsx  Loading.tsx  Logo.tsx  ProtectedRoutes.tsx  SubmitButton.tsx  TextLink.tsx  ThemeToggle.tsx
frontend/client-chat/src/features/auth/: AuthContext.tsx  AuthProvider.tsx  authService.ts  types.ts  useAuth.ts
frontend/client-chat/src/hooks/: useDarkMode.ts
frontend/client-chat/src/interfaces/: types.ts
frontend/client-chat/src/pages/: Dashboard.tsx
frontend/client-chat/src/pages/auth/: Login.tsx  Register.tsx
frontend/client-chat/src/routes/: AppRoutes.tsx
frontend/client-chat/src/utils/: darkMode.ts  handleRequest.ts
