[project]
name = "nullframe-backend"
version = "0.1.0"
description = "FastAPI backend for Nullframe"
authors = [{ name = "Basel Malalla", email = "malalla.basel@gmail.com" }]
dependencies = ["fastapi", "uvicorn[standard]", "motor", "python-dotenv"]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["migrations", ".venv"]

select = ["ALL"]
ignore = ["D203", "D213", "ANN001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
